<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/welcomePage">
    <ImageView
            android:layout_width="429dp"
            android:layout_height="276dp" app:srcCompat="@drawable/coffee_and_donut" android:id="@+id/welcomeImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/picture_of_coffee_and_donut"
    />
    <TextView
            android:text="@string/welcome"
            android:layout_width="176dp"
            android:layout_height="36dp" android:id="@+id/textView"
            android:textAlignment="center" android:textSize="24sp"
            android:textColor="#000000" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/welcomeImage" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="117dp" android:layout_marginEnd="117dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
    />
    <TextView
            android:text="@string/what_would_you_like_to_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:textSize="24sp" android:textAlignment="center"
            android:textColor="#000000" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="63dp"
            android:layout_marginEnd="63dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/order_coffee"
            android:layout_width="129dp"
            android:layout_height="63dp" android:id="@+id/orderCoffeeButton"
            android:layout_marginTop="75dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/orderDonutsButton"
            android:layout_marginEnd="38dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="58dp" android:layout_marginBottom="45dp"
            app:layout_constraintBottom_toTopOf="@+id/viewCurrentOrdersButton" android:onClick="launchCoffee"/>
    <Button
            android:text="@string/order_donuts"
            android:layout_width="129dp"
            android:layout_height="63dp" android:id="@+id/orderDonutsButton"
            android:layout_marginTop="75dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginStart="38dp"
            app:layout_constraintStart_toEndOf="@+id/orderCoffeeButton" android:layout_marginEnd="58dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="45dp"
            app:layout_constraintBottom_toTopOf="@+id/viewStoredOrdersButton" android:onClick="launchDonut"/>
    <Button
            android:text="@string/view_current_order"
            android:layout_width="170dp"
            android:layout_height="63dp" android:id="@+id/viewCurrentOrdersButton"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@+id/orderCoffeeButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/viewStoredOrdersButton"
            android:layout_marginEnd="15dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="155dp" android:onClick="launchCurrentOrder"/>
    <Button
            android:text="@string/view_stored_orders"
            android:layout_width="166dp"
            android:layout_height="63dp" android:id="@+id/viewStoredOrdersButton"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@+id/orderDonutsButton" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/viewCurrentOrdersButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="155dp" android:onClick="launchStoredOrders"/>

</androidx.constraintlayout.widget.ConstraintLayout>