<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CoffeeActivity"
        android:id="@+id/orderCoffeePage" android:background="#FFFFFF">
    <ImageView
            android:layout_width="415dp"
            android:layout_height="280dp" app:srcCompat="@drawable/coffee" android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="457dp" android:contentDescription="@string/picture_of_coffee"/>
    <CheckBox
            android:text="@string/cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/creamCheckbox"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp" android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/milkCheckbox"
            app:layout_constraintEnd_toStartOf="@+id/caramelCheckbox" android:layout_marginEnd="48dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="323dp"
            android:onClick="checkBoxSelected"/>
    <CheckBox
            android:text="@string/whipped_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/whippedCreamCheckbox"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="196dp" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginEnd="26dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="389dp" android:onClick="checkBoxSelected"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/caramelCheckbox"
            android:text="@string/caramel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="33dp" app:layout_constraintTop_toBottomOf="@+id/whippedCreamCheckbox"
            android:layout_marginEnd="100dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="196dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="323dp"
            android:onClick="checkBoxSelected"/>
    <CheckBox
            android:text="@string/milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/milkCheckbox"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="52dp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/whippedCreamCheckbox" android:layout_marginEnd="72dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="389dp"
            android:onClick="checkBoxSelected"/>
    <CheckBox
            android:text="@string/syrup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/syrupCheckbox"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp" android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/creamCheckbox" android:layout_marginEnd="271dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="258dp" android:onClick="checkBoxSelected"/>
    <Spinner
            android:layout_width="123dp"
            android:layout_height="56dp" android:id="@+id/coffeeSizeSpinner"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="180dp"
            android:layout_marginTop="86dp"
            app:layout_constraintTop_toBottomOf="@+id/creamCheckbox" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="144dp" android:layout_marginEnd="144dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/subtotal"
            android:layout_width="251dp"
            android:layout_height="62dp" android:id="@+id/subtotalTextView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="29dp"
            app:layout_constraintTop_toBottomOf="@+id/coffeeSizeSpinner" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="99dp" android:background="#C3C1C1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textAlignment="center"
            android:textSize="24sp" android:lineSpacingExtra="8sp"/>
    <Button
            android:text="@string/add_to_order"
            android:layout_width="251dp"
            android:layout_height="51dp" android:id="@+id/addCoffeeButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="80dp"
            android:layout_marginTop="17dp" app:layout_constraintTop_toBottomOf="@+id/subtotalTextView"
            android:layout_marginEnd="80dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="31dp"
            android:background="#EF8B8B" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:onClick="addCoffee"/>
</androidx.constraintlayout.widget.ConstraintLayout>
