<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CurrentOrderActivity"
        android:id="@+id/currentOrderPage">
    <ImageView
            android:layout_width="164dp"
            android:layout_height="137dp" app:srcCompat="@drawable/shopping_cart" android:id="@+id/imageView2"
            android:contentDescription="@string/shopping_cart_image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="123dp" android:layout_marginEnd="124dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="35dp" app:layout_constraintBottom_toTopOf="@+id/currentOrderListView"/>
    <ListView
            android:layout_width="413dp"
            android:layout_height="184dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/currentOrderListView"
            android:layout_marginTop="35dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginBottom="25dp" app:layout_constraintBottom_toTopOf="@+id/subtotalTextView"/>
    <TextView
            android:text="@string/subtotal"
            android:layout_width="296dp"
            android:layout_height="57dp" android:id="@+id/subtotalTextView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="57dp"
            android:layout_marginEnd="58dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="228dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="25dp" app:layout_constraintTop_toBottomOf="@+id/currentOrderListView"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView
            android:text="@string/tax"
            android:layout_width="296dp"
            android:layout_height="57dp" android:id="@+id/taxTextView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="57dp"
            android:layout_marginTop="11dp" app:layout_constraintTop_toBottomOf="@+id/subtotalTextView"
            android:layout_marginEnd="58dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="159dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView
            android:text="@string/total"
            android:layout_width="296dp"
            android:layout_height="57dp" android:id="@+id/totalTextView"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/taxTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="57dp" android:layout_marginEnd="58dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="90dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <Button
            android:text="@string/place_order"
            android:layout_width="296dp"
            android:layout_height="57dp" android:id="@+id/placeOrderButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="57dp"
            android:layout_marginEnd="58dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/totalTextView" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="19dp" android:onClick="placeOrder"/>
</androidx.constraintlayout.widget.ConstraintLayout>
