<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/orderDonutsPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B39CF0"
    tools:context=".DonutActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="549dp"
        android:layout_height="904dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="248dp"
        android:contentDescription="@string/order_donuts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/deckdonuts" />

    <Spinner
        android:id="@+id/flavorSpinner"
        android:layout_width="251dp"
        android:layout_height="44dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="412dp"
        android:backgroundTint="#FFEB3B"
        android:contextClickable="true"
        android:entries="@array/flavorSpinner"
        android:foregroundTint="#D34D4D"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/donutQuantity"
        android:layout_width="251dp"
        android:layout_height="44dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="288dp"
        android:backgroundTint="#FFEB3B"
        android:contextClickable="true"
        android:entries="@array/donutQuantity"
        android:foregroundTint="#611919"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addToOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="#EDA3E6"
        android:drawableTint="#AA2525"
        android:fontFamily="monospace"
        android:foregroundTint="#200606"
        android:onClick="addDonuts"
        android:text="@string/add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/subtotalDonuts"
        android:layout_width="162dp"
        android:layout_height="58dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/subtotal"
        android:textColor="#83704D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/addToOrderButton"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
